--- a/action.yml
+++ b/action.yml
@@ -24,3 +24,16 @@ runs:
       run: |
         echo "::set-output name=num-args::$(echo ${{ env.ARGCOUNT }})"
       shell: bash
+count-args:
+
+  runs-on: ubuntu-latest
+  
+  steps:
+  - id: report-count
+    uses: <your github userid>/arg-count-action@main
+    with:
+      arguments-to-count: ${{ github.event.inputs.myValues }}
+  - run: echo
+  - shell: bash
+    run: |
+      echo argument count is ${{ steps.report-count.outputs.arg-count }
